# carbonaware-ml

./: .gitignore  LICENSE  README.md  create_realistic_commits.sh  foobar.txt  pyproject.toml
examples/: basic_usage.py
src/carbonaware_ml/: __init__.py  cli.py  logging_tb.py  scheduler.py  trainer.py  utils.py
src/carbonaware_ml/providers/: __init__.py  base.py  electricity_maps.py  tou_ontario.py  watttime.py
