[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "carbonaware-ml"
version = "0.1.0"
description = "Carbon-aware PyTorch training plugin (multi-region via Electricity Maps/WattTime)."
readme = "README.md"
license = "MIT"
authors = ["Carbon Aware ML Maintainers"]
homepage = "https://github.com/tomalmog/carbonaware-ml"
repository = "https://github.com/tomalmog/carbonaware-ml"
keywords = ["pytorch", "carbon", "sustainability", "scheduling", "electricity", "carbon-aware", "ml"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
]
packages = [
  { include = "carbonaware_ml", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.9"
torch = ">=2.0.0"
requests = ">=2.31.0"
apscheduler = { version = ">=3.10.4", optional = true }
tensorboard = { version = ">=2.12.0", optional = true }

[tool.poetry.extras]
scheduler = ["apscheduler"]
tensorboard = ["tensorboard"]
all = ["apscheduler", "tensorboard"]

[tool.poetry.scripts]
carbonaware = "carbonaware_ml.cli:main"

[tool.poetry.urls]
Issues = "https://github.com/tomalmog/carbonaware-ml/issues"

[project]
name = "carbonaware-ml"
version = "0.1.0"
description = "Carbon-aware PyTorch training plugin (multi-region via Electricity Maps/WattTime)."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "Carbon Aware ML Maintainers" }
]
keywords = ["pytorch", "carbon", "sustainability", "scheduling", "electricity", "carbon-aware", "ml"]
dependencies = [
  "torch>=2.0.0",
  "requests>=2.31.0",
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
scheduler = ["apscheduler>=3.10.4"]
tensorboard = ["tensorboard>=2.12.0"]
all = ["apscheduler>=3.10.4", "tensorboard>=2.12.0"]

[project.urls]
Homepage = "https://github.com/tomalmog/carbonaware-ml"
Repository = "https://github.com/tomalmog/carbonaware-ml"
Issues = "https://github.com/tomalmog/carbonaware-ml/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/carbonaware_ml"]

[project.scripts]
carbonaware = "carbonaware_ml.cli:main"


